// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Investigation Search Table component renders correctly 1`] = `
Object {
  "aggregatedIds": Array [
    1,
  ],
  "columns": Array [
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "title",
      "disableSort": true,
      "label": "investigations.title",
    },
    Object {
      "dataKey": "visitId",
      "disableSort": true,
      "label": "investigations.visit_id",
    },
    Object {
      "dataKey": "name",
      "disableSort": true,
      "label": "investigations.name",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "doi",
      "disableSort": true,
      "label": "investigations.doi",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "datasetCount",
      "disableSort": true,
      "label": "investigations.dataset_count",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "investigationInstruments.instrument.fullName",
      "disableSort": true,
      "label": "investigations.instrument",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "startDate",
      "disableSort": true,
      "label": "investigations.start_date",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "endDate",
      "disableSort": true,
      "label": "investigations.end_date",
    },
  ],
  "data": Array [
    Object {
      "doi": "doi 1",
      "endDate": 1560207600000,
      "facility.id": 2,
      "facility.name": "facility name",
      "id": 1,
      "investigationinstrument": Array [
        Object {
          "instrument.id": 3,
          "instrument.name": "LARMOR",
        },
      ],
      "name": "Test 1",
      "startDate": 1560121200000,
      "summary": "foo bar",
      "title": "Test 1",
      "visitId": "1",
    },
  ],
  "detailsPanel": [Function],
  "disableSelectAll": false,
  "loadMoreRows": [Function],
  "loading": false,
  "onCheck": [MockFunction],
  "onSort": [Function],
  "onUncheck": [MockFunction],
  "selectedRows": Array [],
  "shortHeader": true,
  "sort": Object {},
  "totalRowCount": 1,
}
`;

exports[`Investigation Search Table component renders title, visit ID, Name and DOI as links 1`] = `
Array [
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
    href="/browse/investigation/1/dataset"
  >
    Test 1
  </a>,
  <p
    aria-label="Test 1"
    class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Test 1
  </p>,
]
`;

exports[`Investigation Search Table component renders title, visit ID, Name and DOI as links 2`] = `
Array [
  <p
    aria-label="1"
    class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    1
  </p>,
  <p
    aria-label="1"
    class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    1
  </p>,
]
`;

exports[`Investigation Search Table component renders title, visit ID, Name and DOI as links 3`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
  data-testid="investigation-search-table-doi-link"
  href="https://doi.org/doi 1"
>
  doi 1
</a>
`;
